fix modal card closer on IOS

--- a/src/components/ModalCard/ModalCard_core.sass
+++ b/src/components/ModalCard/ModalCard_core.sass
@@ -41,15 +41,15 @@
   border-radius: 12px
   box-shadow: 0 8px 8px 0 rgba(0, 0, 0, .16), 0 0 4px 0 rgba(0, 0, 0, .08)
 
-
-.vc-ModalCard__dismiss
-  position: absolute
-  top: 4px
-  right: 4px
-  width: 48px
-  height: 48px
-  color: var(--placeholder_icon_foreground_primary)
-  justify-content: center
+.vc-ModalCard__in
+  .vc-ModalCard__dismiss
+    position: absolute
+    top: 4px
+    right: 4px
+    width: 48px
+    height: 48px
+    color: var(--placeholder_icon_foreground_primary)
+    justify-content: center
 
 
 .vc-ModalCard__title,
